removing minichat from home page

--- a/core/static/app/app.index.html
+++ b/core/static/app/app.index.html
@@ -82,29 +82,7 @@
   </head>
  
   <body>
-    <h1>Cloud Fortress Mini chat</h1>
-    <div id="connection_details">
-      <label for="username">username:</label>
-      <input type="text" id="username" value="guest" style="background:#ff0000;"/><br />
-      <label for="protocol">protocol:</label>
-      <input type="text" id="protocol" value="wss" style="background:#ff0000;"/><br />
-      <label for="host">host:</label>
-      <input type="text" id="host" value="www.cloud-fortress.com" style="background:#ff0000;"/><br />
-      <label for="port">port:</label>
-      <input type="text" id="port" value="443" style="background:#ff0000;"/><br />
-      <label for="uri">uri:</label>
-      <input type="text" id="uri" value="/ws" style="background:#ff0000;"/><br />
-      <input type="submit" id="connect" value="connect" />
-    </div>
-    <input type="submit" id="disconnect" value="disconnect" />
-    <div id="message_details">
-        </br></br>
-        <label for="message">message:</label>
-        <input type="text" id="message" value=""/><br />
-        <input type="submit" id="send" value="send" />
-    </div>
-    <div id="terminal">
-        
-    </div>
+    <h1>Cloud Fortress</h1>
+    Something will be here soon.
   </body>
 </html>
